K1J-1777: filter certificates from other units (#469)
Co-authored-by: Alexey Ryabov <alexey.ryabov@soprasteria.com>